bk_ida/gccida/g2/print_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:572:6: error: conflicting types for 'print_rtx'
int  print_rtx( unsigned __int16 *a1) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:60:13: note: previous declaration is here
static void print_rtx           PARAMS ((rtx));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:598:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:627:17: error: use of undeclared identifier 'stru_6F109F'
( const char *)&stru_6F109F._IO_read_end + 7, 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:642:44: error: use of undeclared identifier 'stru_6F109F'
result = fprintf( outfile, ( const char *)&stru_6F109F._IO_read_base + 6); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:673:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_write_end + 1, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:678:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_write_end + 4, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:683:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_write_end + 7, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:688:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_buf_base + 2, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:693:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_buf_base + 5, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:698:10: error: use of undeclared identifier 'stru_6F109F'
fwrite( &stru_6F109F._IO_buf_end, 1uLL, 2uLL, outfile); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:702:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_buf_end + 3, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:740:35: error: use of undeclared identifier 'stru_6F109F'
fprintf( outfile, ( const char *)&stru_6F109F._IO_save_end, v37); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:759:35: error: use of undeclared identifier 'stru_6F109F'
fprintf( outfile, ( const char *)&stru_6F109F._IO_backup_base); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:761:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_read_end + 3, 1uLL, 3uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:767:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._IO_save_end + 6, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:769:19: error: use of undeclared identifier 'off_646752'
fprintf( outfile, off_646752, *( ( unsigned int *)a1 + 8)); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:786:35: error: use of undeclared identifier 'stru_6F109F'
fprintf( outfile, ( const char *)&stru_6F109F._markers + 1, *( unsigned int *)( v39 + 88)); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:796:35: error: use of undeclared identifier 'stru_6F109F'
fprintf( outfile, ( const char *)&stru_6F109F._IO_buf_end + 6); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/print-rtl.c:798:35: error: use of undeclared identifier 'stru_6F109F'
fprintf( outfile, ( const char *)&stru_6F109F._IO_backup_base); 
                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_rtx/src/obj/print-rtl.o] Error 1
